fixing an indentation error in SenderSpec.js

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "Mo Kamioner <mkamioner@gmail.com> (https://github.com/mkamioner)",
     "Bastien Léonard <bastien.leonard@gmail.com> (https://github.com/bastienleonard)",
     "Elad Nava <eladnava@gmail.com> (https://github.com/eladnava)",
-    "Marc Obrador <marcobrador89@gmail.com> (https://github.com/marcobrador)"
+    "Marc Obrador <marcobrador89@gmail.com> (https://github.com/marcobrador)",
+    "Chirag Choudhary <chirag200666@gmail.com> (https://github.com/chirag200666)"
   ],
   "repository": {
     "type": "git",
